# FocusIntegral

FocusIntegral/: CMakeLists.txt  FocusIntegral.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_helpers.cpp  mainwindow_integrals.cpp  mainwindow_tasks.cpp  mainwindow_timer.cpp
